@@ -79,8 +79,9 @@ struct zbar_decoder_s {
     zbar_symbol_type_t lock;            /* buffer lock */
 
     /* everything above here is automatically reset */
+    unsigned buf_alloc;                 /* dynamic buffer allocation */
+    unsigned buflen;                    /* binary data length */
     unsigned char *buf;                 /* decoded characters */
-    unsigned buflen;                    /* dynamic buffer allocation */
     void *userdata;                     /* application data */
     zbar_decoder_handler_t *handler;    /* application callback */
 
@@ -174,13 +175,13 @@ static inline char get_lock (zbar_decoder_t *dcode,
 static inline char size_buf (zbar_decoder_t *dcode,
                              unsigned len)
 {
-    if(len < dcode->buflen)
+    if(len < dcode->buf_alloc)
         /* FIXME size reduction heuristic? */
         return(0);
     if(len > BUFFER_MAX)
         return(1);
-    if(len < dcode->buflen + BUFFER_INCR) {
-        len = dcode->buflen + BUFFER_INCR;
+    if(len < dcode->buf_alloc + BUFFER_INCR) {
+        len = dcode->buf_alloc + BUFFER_INCR;
         if(len > BUFFER_MAX)
             len = BUFFER_MAX;
     }
@@ -188,7 +189,7 @@ static inline char size_buf (zbar_decoder_t *dcode,
     if(!buf)
         return(1);
     dcode->buf = buf;
-    dcode->buflen = len;
+    dcode->buf_alloc = len;
     return(0);
 }
 
